Testimonials title: spacing fix in responsive

--- a/assets/styles/04-components/slider.scss
+++ b/assets/styles/04-components/slider.scss
@@ -71,6 +71,10 @@
 
 // testimonials-slider
 .s-block--testimonials{
+  .s-block__title{
+    @apply px-5 xl:px-0
+  }
+
   .container{
     @apply p-0;
   }
@@ -121,7 +125,7 @@
   }
 
   .swiper-slide{
-    @apply overflow-hidden px-3.75;
+    @apply overflow-hidden px-2.5 lg:px-3.75;
     width: 20%;
     height: auto;
 
